2012-08-01	Stephan Linz <linz@li-pro.net>

	* common: HOWTO: add kernel shortcut for Avnet-S6LX9-AXI-tiny-13.2

2012-07-31	Stephan Linz <linz@li-pro.net>

	* common: adapt latest patch sets to u-boot-2012.07

2012-07-29	Stephan Linz <linz@li-pro.net>

	* common: adapt latest patch sets to linux-3.3
	* common: adapt latest patch sets to u-boot-2012.07-rc3
	* common: HOWTO: add XLBLOB shortcut for Avnet-S6LX9-AXI-tiny-13.2

2012-06-26	Stephan Linz <linz@li-pro.net>

	* common: improve build_all.mk make script
	* common: fix dependency error to toolchains in build_all.mk make script

2012-06-25	Stephan Linz <linz@li-pro.net>

	* ptxconfig: add BSP private issue file

2012-06-21	Stephan Linz <linz@li-pro.net>

	* common: adapt latest patch sets to linux-3.3
	* common: adapt latest patch sets to u-boot-2012.04.01

2012-06-17	Stephan Linz <linz@li-pro.net>

	* common: adapt latest patch sets to linux-3.3

2012-05-20	Stephan Linz <linz@li-pro.net>

	* ptxconfig: migrate to ptxdist-2012.05.0

2012-05-11	Stephan Linz <linz@li-pro.net>

	* common: adapt latest patch sets to linux-3.3

2012-05-03	Stephan Linz <linz@li-pro.net>

	* ptxconfig: enable mtd-utils

2012-05-02	Stephan Linz <linz@li-pro.net>

	* common: adapt latest patch sets to u-boot-2012.04.01

2012-04-23	Stephan Linz <linz@li-pro.net>

	* common: adapt latest patch sets to u-boot-2012.04

2012-04-12	Stephan Linz <linz@li-pro.net>

	* ptxconfig: prepare mbref-uio-trunk for kernel 3.3
	* common: adapt latest patch sets to linux-3.3

2012-03-16	Stephan Linz <linz@li-pro.net>

	* common: stay on glibmm-2.22.1 (from ptxdist-2011.12.0)
	* common: stay on glib-2.28.8 (from ptxdist-2011.12.0)
	* ptxconfig: migrate to ptxdist-2012.03.0

2012-03-14	Stephan Linz <linz@li-pro.net>

	* common: HOWTO: add description for Xilinx-ML605-AXI-full-13.2

2012-02-19	Stephan Linz <linz@li-pro.net>

	* common: supports AXI systems by the build_all.mk make script

2012-02-18	Stephan Linz <linz@li-pro.net>
